# mpv_PlayKit

./: README.MD  k7sfunc.py  umpv.py
.github/ISSUE_TEMPLATE/: config.yml  错误报告.md
installer/: mpv-register.bat  mpv-unregister.bat
portable_config/: input_easy.conf  input_scripts.conf  input_uosc.conf  mpv.conf  profiles.conf  script-opts.conf
portable_config/script-opts/: auto_load_fonts.conf  stats_mediainfo.conf  uosc.conf  uosc_lang.conf
portable_config/scripts/: auto_load_fonts.js  input_plus.lua  stats_mediainfo.lua
portable_config/shaders/: ACNet_HDN_RT.glsl  AMD_CAS_RT.glsl  AMD_CAS_rgb_RT.glsl  AMD_CAS_scaled_RT.glsl  AMD_CAS_scaled_rgb_RT.glsl  AMD_FSR_EASU_chroma_RT.glsl  AMD_FSR_EASU_luma_RT.glsl  AMD_FSR_EASU_rgb_RT.glsl  AMD_FSR_RCAS_luma_RT.glsl  AMD_FSR_RCAS_rgb_RT.glsl  AMD_FSR_RT.glsl  AMD_FSR_rgb_RT.glsl  AXAA.glsl  AXAA_md.glsl  Adaptive_sharpen_RT.glsl  Adaptive_sharpen_lite_luma_RT.glsl  AiUpscale_Fast_2x_LineArt_RT.glsl  AiUpscale_Fast_2x_Photo_RT.glsl  ArtCNN_C4F16_DN.glsl  ArtCNN_C4F16_DS.glsl  ArtCNN_C4F32_DN.glsl  ArtCNN_C4F32_DS.glsl  CfL_Prediction_RT.glsl  DCCI_RT.glsl  DLAA_RT.glsl  DLAA_md_RT.glsl  DPID_RT.glsl  DPID_lite_RT.glsl  FAAA_RT.glsl  FAAA_md_RT.glsl  FGCine_freebdl_RT.glsl  FGCine_freebdl_fin_RT.glsl  FineSharp_RT.glsl  GEGL_unsharp_mask_RT.glsl  GEGL_unsharp_mask_luma_RT.glsl  Intel_CMAA2_lite.glsl  Intel_CMAA2_lite_md.glsl  Krell_pinkgirl_RT.glsl  LumaSharpen_RT.glsl  MandelbrotSet_lite_FX_RT.glsl  (+53 more)
portable_config/vs/: MEMC_MVT_STD.vpy
rumpv/: Cargo.toml  build.rs
rumpv/src/: main.rs
(+1 files in other folders)
